Fix missing margin

--- a/src/lacr-demo/app/assets/stylesheets/application.css
+++ b/src/lacr-demo/app/assets/stylesheets/application.css
@@ -179,4 +179,5 @@ mark{
 
 .main-container{
   margin-top: 40px;
+  margin-bottom: 40px;
 }
